# creativity-parameter

./: .gitattributes  .gitignore  LICENCE  README.md  analysis.ipynb  appendix.tex  pyproject.toml  readme.md  requirements.txt  supplementary_materials.tex
data/: 20240216_SurveyData.csv  SurveyDataByEvaluation.csv  survey_data_16_feb_2024.csv  survey_data_by_evaluation.csv
data/stories/: 0-wO.txt  EXZH.txt  GwhZ.txt  HIX9.txt  I-uK.txt  MLY9.txt  Mdt0.txt
data/survey_stories/: -nc7.txt  1bEb.txt  1zjI.txt  9ppk.txt  A7JT.txt  Erj4.txt  Fws7.txt  KleG.txt  L9jp.txt  M3G0.txt  P0S3.txt  SDh5.txt  T96J.txt  Xt1F.txt  Y6zx.txt  YHrP.txt  YoP9.txt  aPfY.txt  eqcV_practice.txt  h2Ze.txt  kZol.txt  metadata.csv  q_bk.txt  w5ak_practice.txt  xUDC.txt  xcX2.txt  y45U.txt
scripts/: compute-embeddings.py  temperatures.py
src/the-creativity-parameter/scripts/: compute-embeddings.py  temp-scales.py
